--- a/doc/trex_index.asciidoc
+++ b/doc/trex_index.asciidoc
@@ -43,6 +43,9 @@ link:trex_manual.html[trex_manual.html] link:trex_book.pdf[trex_manual.pdf]
 link:trex_stateless.html[trex_stateless.html] link:trex_stateless.pdf[trex_stateless.pdf] 
 | Advanced Stateful Manual    | 
 link:trex_astf.html[trex_astf.html] link:trex_astf.pdf[trex_astf.pdf] link:trex_astf_vs_nginx.html[trex_astf_performance.html]
+// trex_emu.html is created by trem-emu git repo
+| Emulation Manual    | 
+link:https://trex-tgn.cisco.com/trex/doc/trex_emu.html[trex_emu.html] 
 | Tutorial TRex on VirtualBox/Docker    | 
 link:trex_vm_manual.html[trex_vm_manual.html] link:trex_vm_manual.pdf[trex_vm_manual.pdf]
 | Cisco Devnet SandBox   | 
@@ -62,6 +65,8 @@ link:cp_stl_docs/index.html[stateless_sdk]
 link:cp_docs/index.html[statelful_sdk] 
 | Advanced Stateful  Python automation API    | 
 link:cp_astf_docs/index.html[astf_sdk] 
+| Emulation Python Automation API    |
+link:cp_emu_docs/index.html[emu_sdk] 
 | NDR Python Automation API    | 
 link:cp_ndr_docs/index.html[ndr_sdk] 
 | Stateful API tutorial              | 
